[package]
name = "nogpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
alloc = []
std = [ "alloc", "err-derive/std" ]

[dependencies]
block_device = "0.1"
err-derive = { version = "0.3", default_features = false }
crc = { version = "^1.8", default_features = false }

[dev-dependencies]
nom = "6.1"
