[package]
name = "nogpt"
version = "0.1.0-pre1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloenk/nogpt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "bitflags" ]
alloc = []
std = [ "alloc", "err-derive/std" ]

[dependencies]
block_device = "0.1"
err-derive = { version = "0.3", default_features = false }
crc = { version = "^1.8", default_features = false }
bitflags = { version = "1.3", optional = true }

[dev-dependencies]
nom = "6.1"
