[package]
name = "nogpt"
authors = [ "Finn Behrens <me@kloenk.dev>" ]
version = "0.1.0-pre1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloenk/nogpt"
homepage = "https://github.com/kloenk/nogpt"
documentation = "https://docs.rs/nogpt"
readme = "README.md"
description = "Rust GUID Partition Table (GPT) parsing library with `#[no_std]` support."
keywords = [ "linux", "disk", "block" ]
categories = [ "hardware-support", "no-std", "parsing" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "bitflags" ]
alloc = []
std = [ "alloc", "err-derive/std" ]

[dependencies]
block_device = { git = "https://github.com/Kloenk/block_device.git", rev = "e53b046af42ebc2e0663ba3ef35515ee214fa987" }
err-derive = { version = "0.3", default_features = false }
crc = { version = "^1.8", default_features = false }
bitflags = { version = "1.3", optional = true }

[dev-dependencies]
nom = "6.1"
